[tool.poetry]
name = "background-remover"
version = "0.1.0"
description = "A Flask API for removing image backgrounds using rembg"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.12"
flask = "2.3.3"
rembg = "2.0.66"
Pillow = "10.0.0"
flask-cors = "4.0.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
